fix spacing and picture alignment on about page

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,14 +3,6 @@
 	margin-bottom: 4%;
 }
 
-.about-1 p, .about-2 p {
-	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-    text-align: left;
-    font-size: 14px;
-    line-height: 17px;
-    word-wrap: break-word;
-}
-
 .about-1 img, .about-2 img {
 	width: : 332px;
 	height: : 295px;
@@ -463,6 +455,7 @@
 	text-align: left;
 	font-size: 14px;
 	word-wrap: break-word;
+	line-height: 180%;
 }
 
 .password {
